# transactions_processing

./: .env.default  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  clients.csv  currency.csv  docker-compose.yml  main.py  pyproject.toml
data/: clients.csv  currency.csv
postgresql/schemas/: public.sql
transactions_processing/: __main__.py  config.py  database.py  transactions.py
