[tool.poetry]
name = "transactions-processing"
version = "0.1.0"
description = ""
authors = ["Danil Sidoruk <danilsidoruknv@yandex.ru>"]
readme = "README.md"
packages = [{include = "transactions_processing"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
black = "^23.3.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
